tajam page (wip): overflow x fix

--- a/projects/tajampage/style.css
+++ b/projects/tajampage/style.css
@@ -55,6 +55,7 @@ body {
   margin: 0 auto;
   position: relative;
   z-index: 10;
+  overflow-x: hidden;
 }
 
 .background-image {
